kata practice: karger min cut + java